@@ -53,6 +53,8 @@ version ?.??.?? (????-??-??):
     network in customer search form [chilan]
   - improvement: allow to select multiple customer groups and number plans
     in invoice report [chilan]
+  - improvement: allow to change ticket state from RT_NEW to RT_OPEN when variable
+    phpui.allow_change_ticket_state_from_open_to_new is set [interduo]
 
 version 1.11.23 (2018-03-21):
 
